--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,19 @@
 /KeyboardManiac.Plugins.ShellExecute/obj/Release/KeyboardManiac.Plugins.ShellExecute.csprojResolveAssemblyReference.cache
 /KeyboardManiac.Plugins.TaskSwitcher/obj/Release/KeyboardManiac.Plugins.TaskSwitcher.csprojResolveAssemblyReference.cache
 /KeyboardManiac.sln.DotSettings.user
+/KeyboardManiac.Core/bin/Debug/Config/KeyboardManiac.log4net.xml
+/KeyboardManiac.Core/bin/Debug/Config/KeyboardManiac.settings.xml
+/KeyboardManiac.Core/bin/Debug/Gallio.dll
+/KeyboardManiac.Core/bin/Debug/Gallio.pdb
+/KeyboardManiac.Core/bin/Debug/Gallio.xml
+/KeyboardManiac.Core/bin/Debug/Gallio.XmlSerializers.dll
+/KeyboardManiac.Core/bin/Debug/MbUnit.dll
+/KeyboardManiac.Core/bin/Debug/MbUnit.pdb
+/KeyboardManiac.Core/bin/Debug/MbUnit.xml
+/KeyboardManiac.Core/obj/Debug/KeyboardManiac.Core.csprojResolveAssemblyReference.cache
+/KeyboardManiac.Gui/bin/Debug/Config/KeyboardManiac.log4net.xml
+/KeyboardManiac.Gui/bin/Debug/Config/KeyboardManiac.settings.xml
+/KeyboardManiac.Gui/bin/Debug/KeyboardManiac.Gui.vshost.exe.manifest
+/KeyboardManiac.v11.suo
+/KeyboardManiac.Gui/KeyboardManiac.Gui.csproj.user
+/KeyboardManiac.Plugins.TaskSwitcher/obj/Debug/KeyboardManiac.Plugins.TaskSwitcher.csprojResolveAssemblyReference.cache
