--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@
 /KeyboardManiac.v11.suo
 /KeyboardManiac.Gui/KeyboardManiac.Gui.csproj.user
 /KeyboardManiac.Plugins.TaskSwitcher/obj/Debug/KeyboardManiac.Plugins.TaskSwitcher.csprojResolveAssemblyReference.cache
+/KeyboardManiac.Sdk/obj/Debug/KeyboardManiac.Plugins.ShellExecute.csprojResolveAssemblyReference.cache
