Added logging and re-enabled command plugins.

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,5 @@
 /KeyboardManiac.Gui/KeyboardManiac.Gui.csproj.user
 /KeyboardManiac.Plugins.TaskSwitcher/obj/Debug/KeyboardManiac.Plugins.TaskSwitcher.csprojResolveAssemblyReference.cache
 /KeyboardManiac.Sdk/obj/Debug/KeyboardManiac.Plugins.ShellExecute.csprojResolveAssemblyReference.cache
+
+/.vs/KeyboardManiac/v14/.suo
